Fix spacing of grid of projects

--- a/style.css
+++ b/style.css
@@ -784,6 +784,12 @@ h2 {
   transition: background .3s;
 }
 
+@media only screen and (min-width: 576px) {
+  .project {
+    margin-bottom: 0;
+  }
+}
+
 .project-title {
   color: #6d7a8a;
   font-size: 16px;
